// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`QuestionWrapper renders correct answer 1`] = `
<div>
  <div
    class="css-11ud1ff-QuestionWrapper"
  >
    <h3
      class="css-1cjrmqs-QuestionWrapper"
    >
      Bern is the capital of
    </h3>
    <button
      class="css-4ptem4-Option"
      type="button"
    >
      <span
        class="css-13f8g8s-Option"
      >
        A
      </span>
      <span
        class="css-oh1baf-Option"
      >
        Switzerland
      </span>
      <svg
        fill="currentColor"
        height="20"
        stroke="currentColor"
        stroke-width="0"
        viewBox="0 0 1024 1024"
        width="20"
        xmlns="http://www.w3.org/2000/svg"
      >
        <title>
          checkIcon
        </title>
        <path
          d="M699 353h-46.9c-10.2 0-19.9 4.9-25.9 13.3L469 584.3l-71.2-98.8c-6-8.3-15.6-13.3-25.9-13.3H325c-6.5 0-10.3 7.4-6.5 12.7l124.6 172.8a31.8 31.8 0 0 0 51.7 0l210.6-292c3.9-5.3.1-12.7-6.4-12.7z"
        />
        <path
          d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm0 820c-205.4 0-372-166.6-372-372s166.6-372 372-372 372 166.6 372 372-166.6 372-372 372z"
        />
      </svg>
    </button>
    <button
      class="css-5v9hz0-Option"
      type="button"
    >
      <span
        class="css-13f8g8s-Option"
      >
        B
      </span>
      <span
        class="css-oh1baf-Option"
      >
        Lisbon
      </span>
    </button>
    <button
      class="css-5v9hz0-Option"
      type="button"
    >
      <span
        class="css-13f8g8s-Option"
      >
        C
      </span>
      <span
        class="css-oh1baf-Option"
      >
        Brasília
      </span>
    </button>
    <button
      class="css-5v9hz0-Option"
      type="button"
    >
      <span
        class="css-13f8g8s-Option"
      >
        D
      </span>
      <span
        class="css-oh1baf-Option"
      >
        Quito
      </span>
    </button>
    <div
      class="css-ipgmsr-QuestionWrapper"
    >
      <span
        class="css-17tonp7-QuestionWrapper"
      >
        1
         / 
        10
      </span>
      <button
        class="css-inaz0x-Button"
        type="button"
      >
        Next
      </button>
    </div>
  </div>
</div>
`;

exports[`QuestionWrapper renders with capitalQuestion 1`] = `
<div>
  <div
    class="css-11ud1ff-QuestionWrapper"
  >
    <h3
      class="css-1cjrmqs-QuestionWrapper"
    >
      Bern is the capital of
    </h3>
    <button
      class="css-1yoohz3-Option"
      type="button"
    >
      <span
        class="css-13f8g8s-Option"
      >
        A
      </span>
      <span
        class="css-oh1baf-Option"
      >
        Switzerland
      </span>
    </button>
    <button
      class="css-1yoohz3-Option"
      type="button"
    >
      <span
        class="css-13f8g8s-Option"
      >
        B
      </span>
      <span
        class="css-oh1baf-Option"
      >
        Lisbon
      </span>
    </button>
    <button
      class="css-1yoohz3-Option"
      type="button"
    >
      <span
        class="css-13f8g8s-Option"
      >
        C
      </span>
      <span
        class="css-oh1baf-Option"
      >
        Brasília
      </span>
    </button>
    <button
      class="css-1yoohz3-Option"
      type="button"
    >
      <span
        class="css-13f8g8s-Option"
      >
        D
      </span>
      <span
        class="css-oh1baf-Option"
      >
        Quito
      </span>
    </button>
    <div
      class="css-ipgmsr-QuestionWrapper"
    >
      <span
        class="css-17tonp7-QuestionWrapper"
      >
        1
         / 
        10
      </span>
    </div>
  </div>
</div>
`;

exports[`QuestionWrapper renders with flagQuestion 1`] = `
<div>
  <div
    class="css-1nzzrsz-QuestionWrapper"
  >
    <img
      alt="flag"
      class="css-8dd1yu-QuestionWrapper"
      src="https://restcountries.eu/data/deu.svg"
    />
    <h3
      class="css-1cjrmqs-QuestionWrapper"
    >
      Which country does this flag belong to?
    </h3>
    <button
      class="css-1yoohz3-Option"
      type="button"
    >
      <span
        class="css-13f8g8s-Option"
      >
        A
      </span>
      <span
        class="css-oh1baf-Option"
      >
        Basseterre
      </span>
    </button>
    <button
      class="css-1yoohz3-Option"
      type="button"
    >
      <span
        class="css-13f8g8s-Option"
      >
        B
      </span>
      <span
        class="css-oh1baf-Option"
      >
        Maputo
      </span>
    </button>
    <button
      class="css-1yoohz3-Option"
      type="button"
    >
      <span
        class="css-13f8g8s-Option"
      >
        C
      </span>
      <span
        class="css-oh1baf-Option"
      >
        Germany
      </span>
    </button>
    <button
      class="css-1yoohz3-Option"
      type="button"
    >
      <span
        class="css-13f8g8s-Option"
      >
        D
      </span>
      <span
        class="css-oh1baf-Option"
      >
        Dhaka
      </span>
    </button>
    <div
      class="css-ipgmsr-QuestionWrapper"
    >
      <span
        class="css-17tonp7-QuestionWrapper"
      >
        1
         / 
        10
      </span>
    </div>
  </div>
</div>
`;

exports[`QuestionWrapper renders wrong answer 1`] = `
<div>
  <div
    class="css-11ud1ff-QuestionWrapper"
  >
    <h3
      class="css-1cjrmqs-QuestionWrapper"
    >
      Bern is the capital of
    </h3>
    <button
      class="css-4ptem4-Option"
      type="button"
    >
      <span
        class="css-13f8g8s-Option"
      >
        A
      </span>
      <span
        class="css-oh1baf-Option"
      >
        Switzerland
      </span>
      <svg
        fill="currentColor"
        height="20"
        stroke="currentColor"
        stroke-width="0"
        viewBox="0 0 1024 1024"
        width="20"
        xmlns="http://www.w3.org/2000/svg"
      >
        <title>
          checkIcon
        </title>
        <path
          d="M699 353h-46.9c-10.2 0-19.9 4.9-25.9 13.3L469 584.3l-71.2-98.8c-6-8.3-15.6-13.3-25.9-13.3H325c-6.5 0-10.3 7.4-6.5 12.7l124.6 172.8a31.8 31.8 0 0 0 51.7 0l210.6-292c3.9-5.3.1-12.7-6.4-12.7z"
        />
        <path
          d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm0 820c-205.4 0-372-166.6-372-372s166.6-372 372-372 372 166.6 372 372-166.6 372-372 372z"
        />
      </svg>
    </button>
    <button
      class="css-1wf7kng-Option"
      type="button"
    >
      <span
        class="css-13f8g8s-Option"
      >
        B
      </span>
      <span
        class="css-oh1baf-Option"
      >
        Lisbon
      </span>
      <svg
        fill="currentColor"
        height="20"
        stroke="currentColor"
        stroke-width="0"
        viewBox="0 0 1024 1024"
        width="20"
        xmlns="http://www.w3.org/2000/svg"
      >
        <title>
          closeIcon
        </title>
        <path
          d="M685.4 354.8c0-4.4-3.6-8-8-8l-66 .3L512 465.6l-99.3-118.4-66.1-.3c-4.4 0-8 3.5-8 8 0 1.9.7 3.7 1.9 5.2l130.1 155L340.5 670a8.32 8.32 0 0 0-1.9 5.2c0 4.4 3.6 8 8 8l66.1-.3L512 564.4l99.3 118.4 66 .3c4.4 0 8-3.5 8-8 0-1.9-.7-3.7-1.9-5.2L553.5 515l130.1-155c1.2-1.4 1.8-3.3 1.8-5.2z"
        />
        <path
          d="M512 65C264.6 65 64 265.6 64 513s200.6 448 448 448 448-200.6 448-448S759.4 65 512 65zm0 820c-205.4 0-372-166.6-372-372s166.6-372 372-372 372 166.6 372 372-166.6 372-372 372z"
        />
      </svg>
    </button>
    <button
      class="css-5v9hz0-Option"
      type="button"
    >
      <span
        class="css-13f8g8s-Option"
      >
        C
      </span>
      <span
        class="css-oh1baf-Option"
      >
        Brasília
      </span>
    </button>
    <button
      class="css-5v9hz0-Option"
      type="button"
    >
      <span
        class="css-13f8g8s-Option"
      >
        D
      </span>
      <span
        class="css-oh1baf-Option"
      >
        Quito
      </span>
    </button>
    <div
      class="css-ipgmsr-QuestionWrapper"
    >
      <span
        class="css-17tonp7-QuestionWrapper"
      >
        1
         / 
        10
      </span>
      <button
        class="css-inaz0x-Button"
        type="button"
      >
        Next
      </button>
    </div>
  </div>
</div>
`;
